Header Section for all devices

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="./Assets/CSS/stylesheet.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fahkwang:wght@200&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fahkwang:wght@700&family=Tenor+Sans&display=swap" rel="stylesheet">
 
     <title>Photographer Landing Page - HTML Template -</title>
 </head>
@@ -19,8 +19,31 @@
         Start Header Section
     -->
 
-    <header>
-        
+    <header id="header">
+        <div class="container header">
+
+            <div class="wrapper">
+
+                <div class="header-img-container">
+                    <img src="./Assets/Media/Images/Header Section/1.jpg" alt="">
+                </div>
+
+                <div class="header-name">
+                    <h1>Jose Gonzales</h1>
+                </div>
+
+            </div>
+
+            <div class="pro-pho">
+                <p>Professional Photographer</p>
+            </div>
+
+            <span class="deco-left-long"></span>
+            <span class="deco-left-short"></span>
+            <span class="deco-right-long"></span>
+            <span class="deco-right-short"></span>
+
+        </div>
     </header>
 
     <!--
