Portfolio Section finished for all devices

--- a/index.html
+++ b/index.html
@@ -201,6 +201,67 @@
     <!--
         End Services Section
     -->
+
+    <!--
+        Start Portfolio Section
+    -->
+
+    <section id="portfolio">
+        <div class="container portfolio">
+
+            <h1>My Portfolio</h1>
+
+            <div class="portfolio-wrapper">
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/1.jpg" alt="">
+                </div>
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/2.jpg" alt="">
+                </div>
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/3.jpg" alt="">
+                </div>
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/4.jpg" alt="">
+                </div>
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/5.jpg" alt="">
+                </div>
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/6.jpg" alt="">
+                </div>
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/7.jpg" alt="">
+                </div>
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/8.jpg" alt="">
+                </div>
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Work Section/9.jpg" alt="">
+                </div>
+
+                <span class="deco1"></span>
+                <span class="deco2"></span>
+                <span class="deco3"></span>
+                <span class="deco4"></span>
+
+            </div>
+
+        </div>
+    </section>
+
+    <!--
+        End Portfolio Section
+    -->
     
 </body>
 </html>
