Packs Section for all devices finished

--- a/index.html
+++ b/index.html
@@ -262,6 +262,178 @@
     <!--
         End Portfolio Section
     -->
+
+    <!--
+        Start Packs Section
+    -->
+
+    <section id="packs">
+        <div class="container packs">
+            <div class="packs-wrapper">
+
+                <div class="pack-card">
+
+                    <div class="information-box">
+
+                        <h2>Parties</h2>
+
+                        <ul>
+                            <li>
+                                Pellentesque dolor
+                            </li>
+
+                            <li>
+                                Congue at nunc et
+                            </li>
+
+                            <li>
+                                Comentum ultrices
+                            </li>
+                        </ul>
+
+                    </div>
+
+                    <div class="img-container">
+
+                        <img src="./Assets/Media/Images/Prices Section/3.jpg" alt="">
+
+                        <div class="hover-animation">
+                            <h2>Interested?</h2>
+                            <a href="#">More Information</a>
+                        </div>
+
+                        <div class="hover-me">
+                            <p>Hover Me</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="pack-card">
+
+                    <div class="information-box">
+
+                        <h2>Photoshootings</h2>
+
+                        <ul>
+                            <li>
+                                Pellentesque dolor
+                            </li>
+
+                            <li>
+                                Congue at nunc et
+                            </li>
+
+                            <li>
+                                Comentum ultrices
+                            </li>
+                        </ul>
+
+                    </div>
+
+                    <div class="img-container">
+
+                        <img src="./Assets/Media/Images/Prices Section/2.jpg" alt="">
+
+                        <div class="hover-animation">
+                            <h2>Interested?</h2>
+                            <a href="#">More Information</a>
+                        </div>
+
+                        <div class="hover-me">
+                            <p>Hover Me</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="pack-card">
+
+                    <div class="information-box">
+
+                        <h2>Products</h2>
+
+                        <ul>
+                            <li>
+                                Pellentesque dolor
+                            </li>
+
+                            <li>
+                                Congue at nunc et
+                            </li>
+
+                            <li>
+                                Comentum ultrices
+                            </li>
+                        </ul>
+
+                    </div>
+
+                    <div class="img-container">
+
+                        <img src="./Assets/Media/Images/Prices Section/1.jpg" alt="">
+
+                        <div class="hover-animation">
+                            <h2>Interested?</h2>
+                            <a href="#">More Information</a>
+                        </div>
+
+                        <div class="hover-me">
+                            <p>Hover Me</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="pack-card">
+
+                    <div class="information-box">
+
+                        <h2>Weddings</h2>
+
+                        <ul>
+                            <li>
+                                Pellentesque dolor
+                            </li>
+
+                            <li>
+                                Congue at nunc et
+                            </li>
+
+                            <li>
+                                Comentum ultrices
+                            </li>
+                        </ul>
+
+                    </div>
+
+                    <div class="img-container">
+
+                        <img src="./Assets/Media/Images/Prices Section/4.jpg" alt="">
+
+                        <div class="hover-animation">
+                            <h2>Interested?</h2>
+                            <a href="#">More Information</a>
+                        </div>
+
+                        <div class="hover-me">
+                            <p>Hover Me</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+   <!--
+        End Packs Section
+   --> 
     
 </body>
 </html>
