--- a/index.html
+++ b/index.html
@@ -433,7 +433,46 @@
 
    <!--
         End Packs Section
-   --> 
+   -->
+
+   <!--
+        Start Contact Section
+   -->
+
+   <section id="contact">
+        <div class="container contact">
+
+            <div class="contact-wrapper">
+
+                <div class="img-container">
+                    <img src="./Assets/Media/Images/Contact Section/1.jpg" alt="">
+                </div>
+
+                <h2>Let's get in contact!</h2>
+
+                <form action="">
+                    <input type="text" name="name" id="name" placeholder="Name" required>
+
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" required></textarea>
+
+                    <button type="submit" id="form-button">Submit</button>
+                </form>
+
+            </div>
+
+            <span class="top-vertical"></span>
+            <span class="top-horizontal"></span>
+            <span class="bottom-vertical"></span>
+            <span class="bottom-horizontal"></span>
+
+        </div>
+   </section>
+
+   <!--
+        End Contact Section
+   -->
     
 </body>
 </html>
