Mobile Nav finished

--- a/index.html
+++ b/index.html
@@ -16,6 +16,96 @@
 <body>
 
     <!--
+        Start Nav Bar
+    -->
+
+    <nav id="nav">
+        <div class="container nav">
+
+            <div class="nav-logo">
+                <a href="#">
+                    <img src="./Assets/Media/Icons/Business Icon.png" alt="">
+                </a>
+            </div>
+
+            <div class="nav-list">
+
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+
+                <div class="nav-items">
+
+                    <ul>
+                        <li>
+                            <a href="#about">
+                                About
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#services">
+                                Services
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#portfolio">
+                                Work
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#packs">
+                                Packs
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#contact">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="social-media-icons">
+
+                        <div class="icon">
+                            <a href="#">
+                                <img src="./Assets/Media/Icons/Insta Icon.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="icon">
+                            <a href="#">
+                                <img src="./Assets/Media/Icons/TikTok Icon.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="icon">
+                            <a href="#">
+                                <img src="./Assets/Media/Icons/Twitter Icon.png" alt="">
+                            </a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </nav>
+
+    <script src="./Assets/JS/mobile-nav.js"></script>
+
+    <!--
+        End Nav Bar
+    -->
+
+    <!--
         Start Header Section
     -->
 
